[package]
name = "oauth_test"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
reqwest = "0.12.18"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
